@@ -1,6 +1,8 @@
 20100116
  - (dtucker) [openbsd-compat/pwcache.c] Pull in includes.h and thus defines.h
    so we correctly detect whether or not we have a native user_from_uid.
+ - (dtucker) [openbsd-compat/openbsd-compat.h] Prototypes for user_from_uid
+   and group_from_gid.
 
 20100115
  - (dtucker) OpenBSD CVS Sync
